--- a/.github/workflows/pr_status.yml
+++ b/.github/workflows/pr_status.yml
@@ -8,6 +8,8 @@ on:
     
 env: 
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,10 +25,14 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        id : pr
         run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
       
       - name: print pr from above step
         run : ${{ steps.pr.outputs.pull_request_number }}
         
       - name: ither way
-        run: echo ::set-output name=PULL_NUMBER::$(echo "$GITHUB_REF" | awk -F / '{print $3}')
+        run: echo ::save-state name=PULL_NUMBER::$(echo "$GITHUB_REF" | awk -F / '{print $3}')
+        
+      - name: git ref
+        run: echo $GITHUB_REF
