--- a/.github/workflows/pr_status.yml
+++ b/.github/workflows/pr_status.yml
@@ -26,13 +26,20 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         id : pr
-        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
+        #run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
+        run: echo "pull_request_number=$(gh pr view --json number -q .number || echo "")" >> $GITHUB_ENV
       
       - name: print pr from above step
-        run : ${{ steps.pr.outputs.pull_request_number }}
+#         run : ${{ steps.pr.outputs.pull_request_number }}
+        run:  echo "${{ env.pull_request_number }}"
         
       - name: ither way
-        run: echo ::save-state name=PULL_NUMBER::$(echo "$GITHUB_REF" | awk -F / '{print $3}')
+#         run: echo ::save-state name=PULL_NUMBER::$(echo "$GITHUB_REF" | awk -F / '{print $3}')
+        run: echo "PULL_NUMBER=$(echo "$GITHUB_REF" | awk -F / '{print $3}')" >> $GITHUB_ENV
+        
+      - name: print pr from above step
+#         run : ${{ steps.pr.outputs.pull_request_number }}
+        run:  echo "${{ env.PULL_NUMBER }}"
         
       - name: git ref
-        run: echo $GITHUB_REF
+        run: echo "${{GITHUB_REF}}"
