--- a/.github/workflows/pr_status.yml
+++ b/.github/workflows/pr_status.yml
@@ -3,8 +3,10 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  pull_request_review:
-    branches: [ submitted,dismissed,edited ]
+#   pull_request_review:
+#     branches: [ submitted,dismissed,edited ]
+  pull_request:
+    branches: [ main ]
     
 env: 
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
