--- a/.github/workflows/pr_status.yml
+++ b/.github/workflows/pr_status.yml
@@ -12,7 +12,7 @@ env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
 permissions:
-  pull-requests: read|write|none
+  pull-requests: read
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
